# Bet-Game-Premier-League

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sampe  sample_env
.docker/: Dockerfile  docker-compose.yml  init.sh
.ebextensions/: django.config
.github/workflows/: bgpl-ci.yml
BetGame_PremierLeague/: .coveragerc  manage.py
BetGame_PremierLeague/.docker/: init.sh
BetGame_PremierLeague/BetGame_PremierLeague/: asgi.py  settings.py  urls.py  wsgi.py
BetGame_PremierLeague/api/: serializers.py  urls.py  views.py
BetGame_PremierLeague/api/tests/: test_views.py
BetGame_PremierLeague/base/: asgi.py  env.py  settings.py  urls.py  wsgi.py
BetGame_PremierLeague/bet/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
BetGame_PremierLeague/bet/factories/: model_factory.py
BetGame_PremierLeague/bet/migrations/: 0001_initial.py  0002_alter_bet_match.py  0003_bet_is_active_alter_bet_choice.py  0006_bet_risk.py  (+4 more)
BetGame_PremierLeague/cron/: func.py  func_event.py  hooks.py  tasks.py
BetGame_PremierLeague/event/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
BetGame_PremierLeague/football_data/: premier_league.py
BetGame_PremierLeague/generate/: urls.py  views.py
BetGame_PremierLeague/league/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
BetGame_PremierLeague/match/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
BetGame_PremierLeague/users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
(+122 files in other folders)
