[tool.djlint]
profile="django"

[tool.poetry]
name = "betgame-premierleague"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
django-crispy-forms = "2.1"
django-debug-toolbar = "4.2"
django-extensions = "3.2.3"
django-filter = "23.4"
django-model-utils = "4.3.1"
django-notifications-hq = "1.8.3"
django-picklefield = "3.1"
django-q = "1.3.9"
django-silk = "5.0.4"
djangorestframework = "3.14.0"
coverage = "^7.3"
crispy-bootstrap5 = "0.7"
factory-boy = "3.3.0"
Markdown = "3.5.1"
pre-commit = "3.5.0"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.0"
Pillow = "10.1.0"
plotly = "5.18.0"
django-storages = "^1.14.2"
boto3 = "^1.34.11"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
